added Michael Arbeider's comments

--- a/guidelinesWP/01.5-reviewRPs.Rmd
+++ b/guidelinesWP/01.5-reviewRPs.Rmd
@@ -20,7 +20,7 @@ LRPs are common in the assessment and management of marine fisheries where they 
 LRPs and indicators of status can be categorized in ways that demonstrate the diversity of approaches that are available across data types and species life-histories. In particular, LRPs can be derived from theoretical relationships (e.g., stock-recruitment based  reference points), historical patterns (e.g., abundance from which recovery has been observed in the past), or empirical analyses on abundances or life-history traits (Marentette et al. In prep.)^[Marentette, J.R., Barrett, T., Cogliati, K.M., Ings, D., Ladell, J., Thiess, M.  Operationalizing Serious Harm: Existing Guidance and Contemporary Canadian Practices. Can. Sci Avis. Secr. Working Paper In prep.]. For marine fish species, LRPs are typically estimated as a minimum level of spawning biomass (or proxy) that should not be breached [@sheltonLimitsOverfishingReference2002; @kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021].  @dfoFisheryDecisionMakingFramework2009 identifies additional indicators such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009].  In general, indicators of status can be categorized as natural metrics (e.g., total abundances or other biological or population characteristics), a proxy for a natural metric (e.g., abundances of indicator stocks), or composite indicators that combine information over multiple dimensions or biological metrics of status (Marentette et al. In prep.).  
 
 
-The composite or multidimensional approach for assessing status, sometimes called a "traffic light" approach [@sheltonLimitsOverfishingReference2002], is particularly useful when theoretical or historical abundance-based metrics are not estimable or not applicable, or when data are limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of numerous data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab, *Chionoecetes opilio*, in Canada, where data on CPUE, egg clutches, and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. Multidimensional approaches can also be useful to address mismatches in scales among biological stocks, the unit of management, and the spatial scale of data collection. These mismatches are not uncommon among marine species, especially invertebrate and salmonid species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020]. They can create challenges when identifying LRPs at the scale of major stocks [@dfoScienceAdvicePrecautionary2021], and can make undesirable states in fish populations difficult to detect and mitigate.  <!--CH: I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
+The composite or multidimensional approach for assessing status, sometimes called a "traffic light" approach [@sheltonLimitsOverfishingReference2002], is particularly useful when theoretical or historical abundance-based metrics are not estimable or not applicable, or when data are limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of numerous data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab, *Chionoecetes opilio*, in Canada, where data on catch per unit effort (CPUE), egg clutches, and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. Multidimensional approaches can also be useful to address mismatches in scales among biological stocks, the unit of management, and the spatial scale of data collection. These mismatches are not uncommon among marine species, especially invertebrate and salmonid species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020]. They can create challenges when identifying LRPs at the scale of major stocks [@dfoScienceAdvicePrecautionary2021], and can make undesirable states in fish populations difficult to detect and mitigate.  <!--CH: I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
 
 <!--CH: in next round, add "Review of Precautionary Approach Reference Points for a Variety of Fisheries Resources in the Maritimes Region". See Carrie's LRP Notes Word file. Dec. 17. 2021--> 
 
