--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -50,7 +50,7 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that populations domi
 For integrated-transition and integrated-wild populations, in some cases WSP assessments have removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish or other data on the relative survival of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin production is removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
 
 
-In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5)[e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may a risk of current status being confounded by hatchery production which masks changes in natural production production and obscures inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments.
+In most cases where hatchery-origin fish are not marked or sampled on the spawning grounds, data on the proportion of hatchery-origin spawners are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be predominantly natural origin (e.g., PNI $\geqslant$ 0.5) [e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may a risk of current status being confounded by hatchery production which masks changes in natural production production and obscures inferences for unenhanced populations in the CU. This risk is partly mediated but not eliminated by removing populations that are dominated by hatchery-origin fish from assessments.
 
 
 
@@ -185,7 +185,7 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
   (\#eq:logisticLRP)
 \end{equation}
 
-An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels above which probabilities are more likely than not, likely, very likely, and virtually certain as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as being as likely as not, encompassing probabilities slightly above even (50%-66%). We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that, and instead demonstrate various choices. Although LRPs are intended to be identified by Science to represent the best scientific estimate of level below which serious harm occurs [@dfoScienceAdvicePrecautionary2021] without necessarily introducing additional precaution under uncertainty <!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....-->, there is no scientific basis to choose one probability over others. 
+An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels above which probabilities are more likely than not, likely, very likely, and virtually certain as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. @mastrandreaGuidanceNoteLead2010 also highlight the range 33%-66% as being as likely as not, encompassing probabilities slightly above even (50%-66%). We recommend that positioning LRPs as thresholds with at least a 50% probability of all component CUs being above Red status, but do not recommend a specific probability level above that, and instead demonstrate various choices. Although LRPs are intended to be identified by Science to represent the best scientific estimate of level below which serious harm occurs [@dfoScienceAdvicePrecautionary2021] without necessarily introducing additional precaution under uncertainty,<!--ref? CH: I realize this would benefit from a reference, but all I have is Rob Kronlund pers. comm....--> there is no scientific basis to choose one probability over others. 
 
 <!-- 
 Also, based on the IUCN probability categories in case studies paper section 2.3, wouldn't we at least recommend that a probability over 50% be chosen, since 50% is 'as likely as not'? Wouldn't the precautionary principle lead us to recommend at least something in the 'likely' category >66%? This would be informed by the precautionary approach, and http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf.  I find it hard to justify the statement that there is no scientific basis to choose one probability over the others, since we have other guidance to go on. Additionally, the idea that the LRP should be above the level where serious harm is occurring makes me think that something at least in the likely category, if not the 90% very likely category, be recommended.
@@ -203,9 +203,9 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (In review). For example, evaluating the assumptions that (a) aggregate abundances are linearly related to log-odds of all CUs being above their lower benchmarks, (b) observations are independent, and (c) there are no influential outliers. In addition, the statistical significance of the predictor variable (aggregate abundance) and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using a performance metric called the hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can also be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
 
 
-We applied a single metric on spawner abundances to approximate CU-status when using the logistic regression approach because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Pacific Salmon Status Scanner.
+We applied a single metric of annual spawner abundances to approximate CU-status when using the logistic regression approach but WSP assessments generally use multiple metrics including trends in abundances and apply generational smoothing. Incorporating metrics on trends and smoothing abundance time-series prior to determining CU status introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. This creates a systematic difference in derivation of LRPs depending on how CU status is assessed. Future research could consider logistic regression models that include autocorrelated residuals to develop LRPs based on CU-statuses derived from multiple metrics (e.g., the Pacific Salmon Status Scanner).
 
-One advantage of logistic regression LRPs over proportional LRPs is that uncertainties in CU-level benchmarks and assessments can be accounted for explicitly. Using a single-metric proxy for CU status also allowed the use of statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments is propagated through to the development of the LRP and the assessment against that LRP. The probability of all CUs being above their lower benchmarks in a given year can be predicted from aggregate abundance, with the predicted probability explicitly accounting for uncertainty in CU-level assessments against lower benchmarks.  
+One advantage of logistic regression LRPs over proportional LRPs is that uncertainties in CU-level benchmarks and assessments can be accounted for explicitly. We use of a statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments is propagated through to the development of the LRP and the assessment against that LRP. The probability of all CUs being above their lower benchmarks in a given year can be predicted from aggregate abundance, with the predicted probability explicitly accounting for uncertainty in CU-level assessments against lower benchmarks.  
 
 In addition, structural uncertainty in underlying assumptions made when developing CU-level benchmarks, such as the form of the spawner-recruitment relationship, can be addressed in at least three ways. First, the weight of evidence for various assumptions can be evaluated to identify the assumption with the most support, which is then used for LRP development. This can include relying on support for various model forms provided in previous stock assessments or from meta-analyses. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the inverse of the variances, the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
 
@@ -215,7 +215,7 @@ In addition, structural uncertainty in underlying assumptions made when developi
 *Alignment with LRP Principles*
 Logistic regression LRPs do not use the best available information for CU statuses in all cases (Principle 1), because they use only one metric of spawner abundances omitting metrics on trends which are informative in data-limited contexts. CUs that do not have abundance-based benchmarks are omitted from consideration of serous harm in this approach even when trends are available to estimate status. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture random noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (In review) for more details). THerefore, in some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Pacific Salmon Status Scanner. Logistic regression LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. 
 
-Logistic regression LRPs are operational (Principle 3) when harvest management occurs at the aggregate level and requires aggregate abundance LRPs to inform management decisions. However, they are more difficult to communicate being derived from model outputs, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify from a science perspective. <!--CH removed since it's mostly repeated in the next pgh: "Logistic-regression based LRPs may not be appropriate operationally if new management procedures are applied that result in changes in covariance in dynamics among CUs. For fisheries without a history of weak-stock management the assumption of stationarity in covariance in exploitation may hold, as in Interior Fraser River Coho, supporting their application of logistic regression approaches to identify recovery targets."-->
+Logistic regression LRPs are operational (Principle 3) when harvest management occurs at the aggregate level and requires aggregate abundance LRPs to inform management decisions. However, they are more difficult to communicate being derived from model outputs, and they require the choice of probability of all CUs being above their lower benchmarks, which is difficult to justify from a science perspective. <!--CH removed since it's mostly repeated in the next pgh: "Logistic-regression based LRPs may not be appropriate operationally if new management procedures are applied that result in changes in covariance in dynamics among CUs. For fisheries without a history of weak-stock management the assumption of stationarity in covariance in exploitation may hold, as in Interior Fraser River Coho, supporting their application of logistic regression approaches to identify recovery targets."-->
 
 
 Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. <!--For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  -->One assumption of this method is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance in dynamics among CUs or relative productivities or capacities of CUs are non-stationary, something that is increasingly common for Pacific salmon, logistic regression LRPs may not represent serious harm under current or future conditions. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs varies (e.g., due to shifts towards weak stock management or when exploitation varies with the abundance of other species).  Uncertainties in CU status are accounted for explicitly when CU- and SMU-level models are statistically integrated (Principle 5). Logistic regression LRPs are aligned with Principle 6 to the extent that aggregate abundances are an acceptably reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from the multidimensional approach recommended under the WSP.
@@ -228,7 +228,7 @@ Reliability of estimation (Principle 4) depends on the reliability of underlying
 
 Similar to logistic regression LRPs, projection LRPs rely on an underlying relationship between aggregate abundances and status of component CUs to identify an LRP based on aggregate abundance. However, unlike logistic regression LRPs, for projection LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from projections instead of historical data.   
 
-The projection LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in population processes (e.g., recruitment and ages-at-maturity) under current exploitation rates characterized with annual implementation uncertainty. Projections are run over an initialization period to remove the impacts of initial conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). We developed projection LRPs for SMUs that are managed under constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As was done for logistic regression LRPs, status was estimated from a single metric rather than the Salmon Scanner because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner.
+The projection LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in population processes (e.g., recruitment and ages-at-maturity) under current exploitation rates characterized with annual implementation uncertainty. Other exploitation scenarios can also be explored. Projections are run over an initialization period to remove the impacts of initial conditions, and then over multiple generations to identify aggregate abundances characterized by an equilibrium state where the distribution of abundances are stable. Projection LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs exceed their lower benchmarks (e.g., S~gen~). We developed projection LRPs for SMUs that are managed under constant exploitation rates with implementation error, though more realistic management procedures that include escapement goals and exploitation limits, or a fixed series of exploitation rates that vary with abundances could be considered in future iterations.  <!-- CW: many salmon stocks are managed through input (effort) control rather than output control (e.g. TACs), so perhaps okay to model MP with a fixed ER model + implementation uncertainty, even though the fixed ER HCR is not actually part of the management objective-->As was done for logistic regression LRPs, status was estimated from a single metric rather than the Salmon Scanner because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner.
 
 One advantage of the approach for projection LRPs over logistic regression LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression LRPs, this method is not limited by historical data on CU status. To implement projection LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (In review) and provided online (see Appendix \@ref(app:links)).  
 
