--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -87,7 +87,7 @@ We characterized CU status in three ways, using: (1) the Pacific Salmon Status S
 
 For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses related to structural assumptions about the stock-recruitment relationship when deriving CU-level benchmarks for all proportion and aggregate abundance-based LRP methods.
 
-We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment relationship than to the choice of LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
+We found that LRPs and resulting status were most sensitive to structural assumptions about the shape of the stock-recruitment relationship. LRPs were less sensitive to LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
 
 For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection regression LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression LRPs.
 
